030-software/fluxcd/apps/jellyfin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    namespace: jellyfin
