030-software/fluxcd/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        nfs-genji: "true"
        policy.gatekeeper.sh/ignore-container-must-have-limits: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: jellyfin
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: jellyfin
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.11.11
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: jellyfin
              containerPort: 8096
              protocol: TCP
            - name: dlna
              containerPort: 1900
              protocol: UDP
            - name: discovery
              containerPort: 7359
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: transcode
              mountPath: /transcode
            - name: temp
              mountPath: /tmp
            # - name: movies
            #   mountPath: /data/movies
            # - name: tvshows
            #   mountPath: /data/tvshows
            - name: tutorials
              mountPath: /data/tutorials
          startupProbe:
            tcpSocket:
              port: jellyfin
          livenessProbe:
            tcpSocket:
              port: jellyfin
          readinessProbe:
            httpGet:
              path: /
              port: jellyfin
          resources:
            limits:
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 1024Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: transcode
          emptyDir:
            sizeLimit: 20Gi
        - name: temp
          emptyDir:
            medium: Memory
        # - name: movies
        #   nfs:
        #     server: genji.home.arpa
        #     path: /movies
        # - name: tvshows
        #   nfs:
        #     server: genji.home.arpa
        #     path: /tvshows
        - name: tutorials
          nfs:
            server: genji.home.arpa
            path: /tutorials
