030-software/fluxcd/apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: jellyfin
    protocol: TCP
    name: jellyfin
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: dlna
spec:
  type: ClusterIP
  ports:
  - port: 1900
    targetPort: dlna
    protocol: UDP
    name: dlna
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  type: ClusterIP
  ports:
  - port: 7359
    targetPort: discovery
    protocol: UDP
    name: discovery
  selector:
    app: jellyfin
