030-software/fluxcd/apps/jellyfin/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  annotations:
    dashboard.${domain}/icon: play
    dashboard.${domain}/name: jellyfin
    dashboard.${domain}/url: https://jellyfin.${domain}
spec:
  hostnames:
  - jellyfin.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
    matches:
    - path:
        type: PathPrefix
        value: /
