030-software/fluxcd/apps/jellyfin/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: jellyfin
  annotations:
    external-dns.kubernetes.io/hostname: jellyfin.${domain}
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: jellyfin
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: discovery
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: discovery
  rules:
    - backendRefs:
        - name: discovery
          port: 7359
